<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/podcast_title"
            style="@style/PodcastTitle"
            android:text="@string/title_view"/>

        <View
            style="@style/Divider" />

        <LinearLayout
            style="@style/LinearLayout"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/daily_news_img"
                style="@style/ImageViewTheme"
                android:src="@drawable/daily_news"/>
            <TextView
                android:id="@+id/podcast_daily_news"
                style="@style/PodcastViewTheme"
                android:text="@string/podcast_daily_news"/>
        </LinearLayout>

        <View
            style="@style/Divider" />

        <LinearLayout
            style="@style/LinearLayout"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/history_img"
                style="@style/ImageViewTheme"
                android:src="@drawable/history"/>
            <TextView
                android:id="@+id/podcast_history"
                style="@style/PodcastViewTheme"
                android:text="@string/podcast_history"/>
        </LinearLayout>

        <View
            style="@style/Divider" />

        <LinearLayout
            style="@style/LinearLayout"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/stem_img"
                style="@style/ImageViewTheme"
                android:src="@drawable/stem"/>
            <TextView
                android:id="@+id/podcast_stem"
                style="@style/PodcastViewTheme"
                android:text="@string/podcast_stem"/>
        </LinearLayout>

        <View
            style="@style/Divider" />

        <LinearLayout
            style="@style/LinearLayout"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/comedy_img"
                style="@style/ImageViewTheme"
                android:src="@drawable/comedy_news"/>
            <TextView
                android:id="@+id/podcast_news_comedy"
                style="@style/PodcastViewTheme"
                android:text="@string/podcast_news_comedy"/>
        </LinearLayout>

        <View
            style="@style/Divider" />

    </LinearLayout>

</ScrollView>